[package]
name = "axum-jrpc"
version = "0.2.1"
edition = "2021"
license = "MIT"
keywords = ["http", "web", "axum", "jrpc", "json-rpc"]
categories = ["asynchronous", "network-programming", "web-programming"]
description = "A JSON-RPC extractor for Axum"
homepage = "https://github.com/0xdeafbeef/axum-jrpc"
repository = "https://github.com/0xdeafbeef/axum-jrpc"
readme = "README.md"

[dependencies]
anyhow = { version = "1.0.56", optional = true }
async-trait = "0.1.53"
axum = "0.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.30"

[features]
anyhow_error = ["anyhow"]

[dev-dependencies]
tracing = "0.1"
anyhow = "1.0.57"
tokio = { version = "1.0", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0.30"
