[package]
name = "axum-jrpc"
version = "0.6.1"
edition = "2021"
license = "MIT"
keywords = ["http", "web", "axum", "jrpc", "json-rpc"]
categories = ["asynchronous", "network-programming", "web-programming"]
description = "A JSON-RPC extractor for Axum"
homepage = "https://github.com/0xdeafbeef/axum-jrpc"
repository = "https://github.com/0xdeafbeef/axum-jrpc"
readme = "README.md"

[dependencies]
anyhow = { version = "1.0.75", optional = true }
async-trait = "0.1.74"
axum = "0.7.1"
cfg-if = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
mime = "0.3.17"
simd-json = { version = "0.13.4", optional = true }
thiserror = "1.0.50"

[features]
anyhow_error = ["anyhow"]
simd = ["simd-json"]
serde_json = ["dep:serde_json"]
default = ["serde_json"]

[dev-dependencies]
tracing = "0.1"
anyhow = "1.0.75"
tokio = { version = "1.34", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0.50"
axum-test-helper = "0.3.0"
